--- a/pages/posts/入党谈话问题与回答整理.md
+++ b/pages/posts/入党谈话问题与回答整理.md
@@ -12,19 +12,19 @@ comment: true	# 打开评论
 
  就要进行入党谈话了，花点时间准备整理一下可能会问到的问题，不想一个问题就哑口无言了。等谈话结束再回来修改一番。
 
- 1、谈谈申请入党的原因？
+ 1、谈谈申请入党的原因？\
  我志愿加入中国共产党，是因为中国共产党是个伟大的党，是中国工人阶级的先锋队。中国共产党对我们国家的作用是至关重要的，是不可替代的，可以说“没有党，就没有新中国”。从我出生到现在的二十几年间，我也见证了中国共产党是如何带领新中国走上复兴之路，所以我对中国共产党愈来愈憧憬，期待有天能加入中国共产党一起建设祖国。当然也有家里亲人是共产党，对我的期待这些原因。
 
- 2、谈谈你入党的态度和决心。
+ 2、谈谈你入党的态度和决心。\
 加入中国共产党是我一直以来的梦想。所以，我会以党员的标准严格要求自己，坚定中国共产党的理念，牢记党的宗旨和各项规章制度，自觉加强学习党的理论知识并付诸实践。我考虑了很久才作出加入党这一选择，我是一个很在意他人眼光的人，我担心自己还没有能力能够尽党员的责任，但是我想挑战一下，不实践怎么能判断自己的能力，在不断实践中进步。
 
-3、谈谈你对自身的认识。
+3、谈谈你对自身的认识。\
 我是一个很苛责自己的人，我习惯性的会想要将一件事情做到我能达到的最好水平，面对他人不好评价，我会积极反思是否是自身问题，及时改正。对别人的建议我会先去吸收，在实践中判断能否适用。在生活学习上，我更像一个经验主义者，习惯性地将当前面对的事情与经历过的事情比较，从中优化创新出一个更适合方案用来解决面临的问题。我也喜欢有计划地完成一系列事情。
 
-4、你认为身为一个共产党员应该具备什么样的基本条件？
+4、你认为身为一个共产党员应该具备什么样的基本条件？\
 我认为身为中国共产党员，必须要有比一般群众更高的共产主义觉悟，以全心全意为人民服务为宗旨，坚持党和人民的利益高于一切的原则。坚持党的领导，实事求是，实践是检验真理的唯一标准。
 
 #### 基本概念整理
-党的宗旨：全心全意为人民服务。
-四项基本原则：坚持社会主义道路、坚持人民民主专政、坚持中国共产党的领导、坚持马克思列宁主义毛泽东思想。
-党的群众路线：一切为了群众，一切依靠群众，从群众中来到群众中去，把党的正确主张变为群众的自觉行动。
+党的宗旨：全心全意为人民服务。\
+四项基本原则：坚持社会主义道路、坚持人民民主专政、坚持中国共产党的领导、坚持马克思列宁主义毛泽东思想。\
+党的群众路线：一切为了群众，一切依靠群众，从群众中来到群众中去，把党的正确主张变为群众的自觉行动。\
