remould the sponsor icon

--- a/pages/posts/入党谈话问题与回答整理.md
+++ b/pages/posts/入党谈话问题与回答整理.md
@@ -27,4 +27,4 @@ comment: true	# 打开评论
 #### 基本概念整理
 党的宗旨：全心全意为人民服务。\
 四项基本原则：坚持社会主义道路、坚持人民民主专政、坚持中国共产党的领导、坚持马克思列宁主义毛泽东思想。\
-党的群众路线：一切为了群众，一切依靠群众，从群众中来到群众中去，把党的正确主张变为群众的自觉行动。\
+党的群众路线：一切为了群众，一切依靠群众，从群众中来到群众中去，把党的正确主张变为群众的自觉行动。
