--- a/pages/posts/入党谈话问题与回答整理.md
+++ b/pages/posts/入党谈话问题与回答整理.md
@@ -7,7 +7,7 @@ tags:
   - 思想觉悟
   - 入党
 top: 1
-comment: true	# 打开评论
+comment: false	# 打开评论
 ---
 
  就要进行入党谈话了，花点时间准备整理一下可能会问到的问题，不想一个问题就哑口无言了。等谈话结束再回来修改一番。
